--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node server.js",
+    "start": "node server.js",
+    "dev" : "nodemon server.js",
     "test": "jest",
     "migrate": "sqlite3 db/election.db < db/schema.sql",
     "seed": "sqlite3 db/election.db < db/seeds.sql",
     "db": "sqlite3 db/election.db"
   },
-  "jest" : {
+  "jest": {
     "collectCoverage": true
   },
   "repository": {
@@ -29,6 +30,7 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "jest": "^26.5.3"
+    "jest": "^26.5.3",
+    "nodemon": "^2.0.4"
   }
 }
